--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,10 @@
     "bootstrap": "~3.1.1",
     "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
-    "angular-animate": "1.3.x"
+    "angular-touch": "1.3.x",
+    "angular-animate": "x.x.x"
+  },
+  "resolutions": {
+    "angular": "1.3.20"
   }
 }
